--- a/style/style.less
+++ b/style/style.less
@@ -28,6 +28,20 @@ body {
     }
 }
 
+.document-item
+{
+	input[type=text]
+	{
+		width:20%;
+		height:2em;
+	}
+
+	textarea
+	{
+		width:20%;
+	}
+}
+
 footer {
 	display: block;
 	height: 10vh;
