--- a/style/style.css
+++ b/style/style.css
@@ -3,25 +3,46 @@ body {
   padding: 0;
   /*font-family: monospace;*/
 }
-#document_list a {
-  display: inline-block;
-  width: 20%;
+#app {
+  margin: 0 5%;
 }
-#document_list div {
-  width: 30%;
-}
-#document_list div:first-child {
-  width: 49%;
-}
+#document_list a,
+#document_list div,
 #document_list ul li {
   display: inline-block;
+}
+#document_list li {
+  margin-bottom: 10px;
+}
+#document_list div > ul li {
+  margin-right: 5px;
+  margin-bottom: 0;
+}
+#document_list div {
+  margin: 0;
+}
+#document_list div:first-of-type {
+  margin-right: 2%;
+}
+#document_list input[type=checkbox] {
+  position: initial;
+  margin: 0 2%;
+  opacity: 10;
+}
+.document-item {
+  margin-top: 10px;
 }
 .document-item input[type=text] {
   width: 20%;
   height: 2em;
+  border: 1px solid #9e9e9e;
+  display: block;
 }
 .document-item textarea {
   width: 20%;
+  display: block;
+  margin-bottom: 5px;
+  height: 40%;
 }
 footer {
   display: block;
