--- a/style/style.less
+++ b/style/style.less
@@ -4,41 +4,66 @@ body {
 	/*font-family: monospace;*/
 }
 
+#app
+{
+	margin:0 5%;
+}
+
 #document_list
 {
-    a
-    {
-        display: inline-block;
-        width:20%;
-    }
-
-    div
-    {
-        width:30%;
-    }
-
-    div:first-child
-    {
-        width:49%;
-    }
-
-    ul li
+    a, div, ul li 
     {
         display: inline-block;
     }
+
+
+	li
+	{
+		margin-bottom: 10px;
+	}
+
+	div > ul li
+	{
+		margin-right:5px;
+		margin-bottom: 0;
+	}
+
+	div
+	{
+		margin:0;
+	} 
+
+	div:first-of-type
+	{
+		margin-right:2%;
+	} 
+
+	input[type=checkbox]
+	{
+		position:initial;
+		margin:0 2%;
+		opacity: 10;
+	}
 }
 
 .document-item
 {
+	margin-top:10px;
+	
 	input[type=text]
 	{
 		width:20%;
 		height:2em;
+		border: 1px solid #9e9e9e;
+		display: block;
 	}
 
 	textarea
 	{
 		width:20%;
+		display: block;
+		margin-bottom: 5px;
+		height: 40%;
 	}
 }
 
