--- a/style/style.css
+++ b/style/style.css
@@ -28,15 +28,20 @@ body {
   position: initial;
   margin: 0 2%;
   opacity: 10;
+  pointer-events: initial;
 }
 .document-item {
   margin-top: 10px;
 }
-.document-item input[type=text] {
+.document-item input[type=text],
+.document-item select {
   width: 20%;
   height: 2em;
   border: 1px solid #9e9e9e;
   display: block;
+}
+.document-item select {
+  margin-bottom: 20px;
 }
 .document-item textarea {
   width: 20%;
