--- a/style/style.less
+++ b/style/style.less
@@ -43,6 +43,7 @@ body {
 		position:initial;
 		margin:0 2%;
 		opacity: 10;
+		pointer-events: initial;
 	}
 }
 
@@ -50,12 +51,17 @@ body {
 {
 	margin-top:10px;
 	
-	input[type=text]
+	input[type=text], select
 	{
 		width:20%;
 		height:2em;
 		border: 1px solid #9e9e9e;
 		display: block;
+	}
+
+	select
+	{
+		margin-bottom: 20px;
 	}
 
 	textarea
